--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:push": "drizzle-kit push"
   },
   "keywords": [],
   "author": {
@@ -35,6 +39,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/react": "^19.1.12",
@@ -43,6 +48,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "css-loader": "^6.11.0",
+    "drizzle-kit": "^0.31.4",
     "electron": "37.4.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
@@ -55,11 +61,13 @@
     "style-loader": "^3.3.4",
     "ts-jest": "^29.4.1",
     "ts-loader": "^9.5.4",
-    "typescript": "~4.5.4"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
+    "better-sqlite3": "^12.2.0",
     "chokidar": "^4.0.3",
     "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.44.5",
     "electron-squirrel-startup": "^1.0.1",
     "js-yaml": "^4.1.0",
     "react": "^19.1.1",
