--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/node": "^22.18.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
