[Drizzle]: Implement Phase 2A - Repository Pattern Migration
- Created base repository class with generic CRUD operations
- Implemented DrizzleProjectRepository with all interface methods
- Implemented DrizzleExecutionRepository for execution tracking
- Implemented DrizzleEventRepository for event logging
- Updated database factory for feature flag switching
- Fixed TypeScript compilation errors and enum mismatches
- Fixed fs.constants import for Jest compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ coverage/
 # Keep .github directory and its contents
 !.github/
 !.github/**
+# Coverage reports
+coverage/
+
+# Serena files
+.serena/
