[Core] Refactor to functional programming paradigm and add security improvements
Major refactoring to align with CLAUDE.md functional programming standards:

Security & IPC:
- Implement secure preload script with contextBridge for IPC communication
- Add complete IPC API for projects, config, notifications, and app operations
- Enable context isolation and disable node integration in renderer

Functional Programming Compliance:
- Remove global variables from main process (tray, mainWindow)
- Replace all production let variables with const
- Convert error classes to factory functions with type guards
- Fix mutable state in debounce/throttle utilities using object wrappers
- Refactor parseDuration to avoid mutable accumulator pattern
- Use closure-based state management instead of globals

Logging Infrastructure:
- Add Winston logger configuration to replace console.log statements
- Create service-specific loggers for better debugging
- Implement timed operation helpers for performance monitoring
- Configure automatic log rotation with size limits

Test Fixes:
- Update validation tests to use createValidationError factory
- Add type guards for error checking instead of instanceof
- Fix ConfigValidationError usage in test assertions
- Resolve TypeScript errors from class-to-interface conversion

Also includes:
- Updated .gitignore to exclude coverage/ and .serena/ directories
- Removed all coverage files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ Thumbs.db
 # Test coverage
 coverage/
 
+# Serena AI assistant
+.serena/
+
 # Keep .github directory and its contents
 !.github/
 !.github/**
