[Core] Refactor to functional programming paradigm and add security improvements (#23)

--- a/.gitignore
+++ b/.gitignore
@@ -38,11 +38,9 @@ Thumbs.db
 # Test coverage
 coverage/
 
+# Serena AI assistant
+.serena/
+
 # Keep .github directory and its contents
 !.github/
 !.github/**
-# Coverage reports
-coverage/
-
-# Serena files
-.serena/
