[CLI]: Port Go CLI to TypeScript and integrate with Electron app

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -27,3 +27,18 @@ tasks:
       - task: lint
       - task: typecheck
       - task: test
+
+  cli:
+    desc: Run the CLI tool with arguments
+    cmds:
+      - npm run cli:run -- {{.CLI_ARGS}}
+
+  cli:build:
+    desc: Build the CLI tool
+    cmds:
+      - npm run cli:build
+
+  cli:init:
+    desc: Initialize a killall-tofu project in the current directory
+    cmds:
+      - npm run cli:run -- init {{.CLI_ARGS}}
