--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,6 +1,12 @@
 version: '3'
 
 tasks:
+  start:
+    desc: Clean database and start fresh development server
+    cmds:
+      - task: clean
+      - npm run start
+
   dev:
     desc: Start local development server
     cmds:
@@ -42,3 +48,8 @@ tasks:
     desc: Initialize a killall-tofu project in the current directory
     cmds:
       - npm run cli:run -- init {{.CLI_ARGS}}
+
+  clean:
+    desc: Clean the ~/.killall directory (removes database and all data)
+    cmds:
+      - node scripts/clean-database.js
