--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "benchmark": "ts-node scripts/benchmark-drizzle.ts",
     "benchmark:memory": "node --expose-gc -r ts-node/register scripts/memory-test.ts",
     "benchmark:bundle": "ts-node scripts/bundle-size-analysis.ts",
-    "benchmark:all": "npm run benchmark && npm run benchmark:memory && npm run benchmark:bundle"
+    "benchmark:all": "npm run benchmark && npm run benchmark:memory && npm run benchmark:bundle",
+    "cli:build": "node scripts/build-cli-simple.js",
+    "cli:run": "ts-node src/cli/index.ts",
+    "prepackage": "npm run cli:build",
+    "postinstall": "npx @electron/rebuild"
   },
   "keywords": [],
   "author": {
@@ -55,6 +59,7 @@
     "css-loader": "^6.11.0",
     "drizzle-kit": "^0.31.4",
     "electron": "37.4.0",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
@@ -70,8 +75,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "better-sqlite3": "^12.2.0",
     "chokidar": "^4.0.3",
+    "commander": "^14.0.0",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.5",
     "electron-squirrel-startup": "^1.0.1",
@@ -79,6 +86,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   }
 }
